# KP2025

./: CMakeLists.txt  main.cpp
BLL/: DocumentService.cpp  DocumentService.h  DomainException.h  LoanService.cpp  LoanService.h  Repository.h  UserService.cpp  UserService.h
DAL/: DalException.h  Document.cpp  Document.h  EntityContext.cpp  EntityContext.h  IDataProvider.h  JsonProvider.cpp  JsonProvider.h  Loan.cpp  Loan.h  User.cpp  User.h
PL/: ConsoleView.cpp  ConsoleView.h  IView.h
tests/: CMakeLists.txt  DocumentService_tests.cpp  Document_tests.cpp  LoanService_tests.cpp  Loan_tests.cpp  UserService_tests.cpp  User_tests.cpp
